--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "datatables.net": "^2.2.2",
     "dropzone": "^6.0.0-beta.2",
+    "ip-geolocation-api-sdk-typescript": "^1.0.7",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "next": "15.2.4",
